--- a/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Employee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Employee.Designer.cs">
+      <DependentUpon>Employee.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL.cs" />
+    <EmbeddedResource Include="Employee.resx">
+      <DependentUpon>Employee.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +93,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -97,6 +107,48 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\connection_button_clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\connection_button_Hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\connection_button_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\door.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\employee_button_clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\employee_button_Hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\employee_button_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\report_button_clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\report_button_Hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\report_button_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\Time_button_clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\Time_button_Hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\Time_button_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\header_REPORT_A.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
