--- a/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
@@ -46,11 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs">
+    <Compile Include="FormEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Employee.Designer.cs">
-      <DependentUpon>Employee.cs</DependentUpon>
+    <Compile Include="FormEmployee.Designer.cs">
+      <DependentUpon>FormEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormEmployeeAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEmployeeAdd.Designer.cs">
+      <DependentUpon>FormEmployeeAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -73,8 +79,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL.cs" />
-    <EmbeddedResource Include="Employee.resx">
-      <DependentUpon>Employee.cs</DependentUpon>
+    <EmbeddedResource Include="FormEmployee.resx">
+      <DependentUpon>FormEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormEmployeeAdd.resx">
+      <DependentUpon>FormEmployeeAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
@@ -149,6 +158,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\pics\header_REPORT_A.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\header_EMPLOYEE.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\ADD_BTN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\DELETE_BTN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\DELETE_BTN_HOVER.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\FIX_BTN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\FIX_BTN_HOVER.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\VIEW_BTN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\VIEW_BTN_HOVER.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\pics\ADD_BTN_HOVER.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
