update add form

--- a/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
@@ -46,11 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormAddDoor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAddDoor.Designer.cs">
+      <DependentUpon>FormAddDoor.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormConnection.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormConnection.Designer.cs">
       <DependentUpon>FormConnection.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDelete.Designer.cs">
+      <DependentUpon>FormDelete.cs</DependentUpon>
     </Compile>
     <Compile Include="FormEmployee.cs">
       <SubType>Form</SubType>
@@ -63,6 +75,12 @@
     </Compile>
     <Compile Include="FormEmployeeAdd.Designer.cs">
       <DependentUpon>FormEmployeeAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormEmployeeAddEM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEmployeeAddEM.Designer.cs">
+      <DependentUpon>FormEmployeeAddEM.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -86,14 +104,23 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL.cs" />
+    <EmbeddedResource Include="FormAddDoor.resx">
+      <DependentUpon>FormAddDoor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormConnection.resx">
       <DependentUpon>FormConnection.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDelete.resx">
+      <DependentUpon>FormDelete.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormEmployee.resx">
       <DependentUpon>FormEmployee.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormEmployeeAdd.resx">
       <DependentUpon>FormEmployeeAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormEmployeeAddEM.resx">
+      <DependentUpon>FormEmployeeAddEM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
