--- a/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
@@ -232,6 +232,9 @@
   <ItemGroup>
     <None Include="bin\pics\ADD_BTN_HOVER.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\simple-green-background.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
