Done Form_Edit_User

--- a/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
@@ -459,6 +459,9 @@
   <ItemGroup>
     <None Include="bin\pics\698913-icon-81-document-add-128.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\update_btn.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
