fixed to buf and tested worked

--- a/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/RFID_DOOR_APP.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataProtocol.cs" />
     <Compile Include="Data_Board.cs" />
     <Compile Include="DOOR_CHECK.cs" />
     <Compile Include="Door_Controller.cs">
